--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,19 +3,39 @@
     <!--<color name="colorPrimary">#008577</color>-->
     <!--<color name="colorPrimaryDark">#00574B</color>-->
     <!--<color name="colorAccent">#D81B60</color>-->
-    <color name="colorPrimary">#03A9F4</color>
-    <color name="colorPrimaryDark">#0288D1</color>
-    <color name="colorAccent">#FF5252</color>
+    <!--<color name="colorPrimary">#03A9F4</color>-->
+    <!--<color name="colorPrimaryDark">#0288D1</color>-->
+    <!--<color name="colorAccent">#FF5252</color>-->
 
     <!--<color name="colorPrimary">#4CAF50</color>-->
     <!--<color name="colorPrimaryDark">#388E3C</color>-->
-    <color name="primary_light">#C8E6C9</color>
+    <!--<color name="primary_light">#C8E6C9</color>-->
     <!--<color name="colorAccent">#FF5722</color>-->
-    <color name="primary_text">#212121</color>
-    <color name="secondary_text">#757575</color>
-    <color name="icons">#FFFFFF</color>
-    <color name="divider">#BDBDBD</color>
+    <!--<color name="primary_text">#212121</color>-->
+    <!--<color name="secondary_text">#757575</color>-->
+    <!--<color name="icons">#FFFFFF</color>-->
+    <!--<color name="divider">#BDBDBD</color>-->
 
-    <color name="background">#dddddd</color>
+    <color name="background">#8eacbb</color>
+
+    <!--<color name="colorPrimary">#4CAF50</color>-->
+    <!--<color name="colorPrimaryDark">#388E3C</color>-->
+    <!--<color name="primary_light">#C8E6C9</color>-->
+    <!--<color name="colorAccent">#FF5722</color>-->
+    <!--<color name="primary_text">#212121</color>-->
+    <!--<color name="secondary_text">#757575</color>-->
+    <color name="icons">#FFFFFF</color>
+    <!--<color name="divider">#BDBDBD</color>-->
+
+    <color name="colorPrimary">#607d8b</color>
+    <color name="primary_light">#8eacbb</color>
+    <color name="colorPrimaryDark">#34515e</color>
+    <color name="secondaryColor">#ff3d00</color>
+    <color name="secondaryLightColor">#ff7539</color>
+    <color name="secondaryDarkColor">#c30000</color>
+    <color name="primary_text">#000000</color>
+    <color name="secondary_text">#000000</color>
+    <color name="colorAccent">#ff3d00</color>
+
 
 </resources>
