--- a/app/src/main/res/layout/destination_item.xml
+++ b/app/src/main/res/layout/destination_item.xml
@@ -16,7 +16,7 @@
 <!--</ImageView>-->
 
 <android.support.design.card.MaterialCardView
-    android:id="@+id/qolcard"
+    android:id="@+id/qol_card"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -28,7 +28,10 @@
    >
     <LinearLayout android:layout_width="match_parent"
                   android:layout_height="match_parent"
-                  android:orientation="vertical">
+                  android:orientation="vertical"
+                  android:id="@+id/destination_container"
+    android:clickable="true"
+    android:focusable="true">
         <ImageView android:id="@+id/destination_item"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
@@ -47,7 +50,10 @@
             android:gravity="start|center_horizontal"
             android:textAlignment="center"
             android:textSize="16sp"
-            tools:text="New Delhi"/>
+            tools:text="New Delhi"
+            android:clickable="true"
+            android:focusable="true"
+        />
 
     </LinearLayout>
 
