--- a/app/src/main/res/layout/main_activity.xml
+++ b/app/src/main/res/layout/main_activity.xml
@@ -239,7 +239,7 @@
         <android.support.v7.widget.RecyclerView
             android:id="@+id/rv_populardestination"
             android:layout_width="match_parent"
-            android:layout_height="300dp"
+            android:layout_height="wrap_content"
             android:layout_marginBottom="30dp"
             android:layout_marginEnd="20dp"
             android:layout_marginStart="20dp"
@@ -247,6 +247,8 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="1.0"
             app:layout_constraintStart_toStartOf="parent"
+            app:layout_constrainedHeight="true"
+
         />
 
 
