--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -27,8 +27,8 @@
             @transition/grid_exit
         </item>
 
-        <item name="android:windowAllowEnterTransitionOverlap">false</item>
-        <item name="android:windowSharedElementsUseOverlay">false</item>
+        <item name="android:windowAllowEnterTransitionOverlap">true</item>
+        <item name="android:windowSharedElementsUseOverlay">true</item>
 
         <item name="android:windowContentTransitions">true</item>
         <item name="android:windowActivityTransitions">true</item>
