--- a/app/src/main/res/layout/activity_details.xml
+++ b/app/src/main/res/layout/activity_details.xml
@@ -93,13 +93,13 @@
                     android:layout_marginStart="40dp"
                     CircleProgressView:cpv_autoTextSize="true"
                     CircleProgressView:cpv_barColor="@color/colorPrimaryDark"
-                    CircleProgressView:cpv_barWidth="35dp"
+                    CircleProgressView:cpv_barWidth="30dp"
                     CircleProgressView:cpv_innerContourSize="0dp"
                     CircleProgressView:cpv_outerContourSize="0dp"
                     CircleProgressView:cpv_rimColor="@color/primary_light"
-                    CircleProgressView:cpv_rimWidth="35dp"
+                    CircleProgressView:cpv_rimWidth="30dp"
                     CircleProgressView:cpv_seekMode="false"
-                    CircleProgressView:cpv_showUnit="true"
+                    CircleProgressView:cpv_showUnit="false"
                     CircleProgressView:cpv_spinColor="@color/primary_light"
                     CircleProgressView:cpv_textColor="@color/colorPrimaryDark"
                     CircleProgressView:cpv_textScale="1"
@@ -108,6 +108,7 @@
                     CircleProgressView:cpv_unitPosition="right_top"
                     CircleProgressView:cpv_unitScale="1"
                     CircleProgressView:cpv_value="5"
+                    CircleProgressView:cpv_fillColor="@color/colorPrimaryDark"
                 android:layout_weight="1"/>
 
 
@@ -159,22 +160,24 @@
                     android:layout_marginStart="40dp"
                     CircleProgressView:cpv_autoTextSize="true"
                     CircleProgressView:cpv_barColor="@color/colorPrimaryDark"
-                    CircleProgressView:cpv_barWidth="35dp"
+                    CircleProgressView:cpv_barWidth="30dp"
                     CircleProgressView:cpv_innerContourSize="0dp"
                     CircleProgressView:cpv_outerContourSize="0dp"
                     CircleProgressView:cpv_rimColor="@color/primary_light"
-                    CircleProgressView:cpv_rimWidth="35dp"
+                    CircleProgressView:cpv_rimWidth="30dp"
                     CircleProgressView:cpv_seekMode="false"
-                    CircleProgressView:cpv_showUnit="true"
+                    CircleProgressView:cpv_showUnit="false"
                     CircleProgressView:cpv_spinColor="@color/primary_light"
                     CircleProgressView:cpv_textColor="@color/colorPrimaryDark"
-                    CircleProgressView:cpv_textScale="1"
+                    CircleProgressView:cpv_textScale="0"
                     CircleProgressView:cpv_unit="%"
                     CircleProgressView:cpv_unitColor="@color/primary_light"
                     CircleProgressView:cpv_unitPosition="right_top"
                     CircleProgressView:cpv_unitScale="1"
                     CircleProgressView:cpv_value="5"
-                android:layout_weight="1"/>
+                    CircleProgressView:cpv_fillColor="@color/colorPrimaryDark"
+
+                    android:layout_weight="1"/>
             </TableRow>
 
             <View
@@ -220,22 +223,24 @@
                     android:layout_marginStart="40dp"
                     CircleProgressView:cpv_autoTextSize="true"
                     CircleProgressView:cpv_barColor="@color/colorPrimaryDark"
-                    CircleProgressView:cpv_barWidth="35dp"
+                    CircleProgressView:cpv_barWidth="30dp"
                     CircleProgressView:cpv_innerContourSize="0dp"
                     CircleProgressView:cpv_outerContourSize="0dp"
                     CircleProgressView:cpv_rimColor="@color/primary_light"
-                    CircleProgressView:cpv_rimWidth="35dp"
+                    CircleProgressView:cpv_rimWidth="30dp"
                     CircleProgressView:cpv_seekMode="false"
-                    CircleProgressView:cpv_showUnit="true"
+                    CircleProgressView:cpv_showUnit="false"
                     CircleProgressView:cpv_spinColor="@color/primary_light"
                     CircleProgressView:cpv_textColor="@color/colorPrimaryDark"
-                    CircleProgressView:cpv_textScale="1"
+                    CircleProgressView:cpv_textScale="0"
                     CircleProgressView:cpv_unit="%"
                     CircleProgressView:cpv_unitColor="@color/primary_light"
                     CircleProgressView:cpv_unitPosition="right_top"
                     CircleProgressView:cpv_unitScale="1"
                     CircleProgressView:cpv_value="5"
-                android:layout_weight="1"/>
+                    CircleProgressView:cpv_fillColor="@color/colorPrimaryDark"
+
+                    android:layout_weight="1"/>
 
 
             </TableRow>
@@ -283,22 +288,24 @@
                     android:layout_marginStart="40dp"
                     CircleProgressView:cpv_autoTextSize="true"
                     CircleProgressView:cpv_barColor="@color/colorPrimaryDark"
-                    CircleProgressView:cpv_barWidth="35dp"
+                    CircleProgressView:cpv_barWidth="30dp"
                     CircleProgressView:cpv_innerContourSize="0dp"
                     CircleProgressView:cpv_outerContourSize="0dp"
                     CircleProgressView:cpv_rimColor="@color/primary_light"
-                    CircleProgressView:cpv_rimWidth="35dp"
+                    CircleProgressView:cpv_rimWidth="30dp"
                     CircleProgressView:cpv_seekMode="false"
-                    CircleProgressView:cpv_showUnit="true"
+                    CircleProgressView:cpv_showUnit="false"
                     CircleProgressView:cpv_spinColor="@color/primary_light"
                     CircleProgressView:cpv_textColor="@color/colorPrimaryDark"
-                    CircleProgressView:cpv_textScale="1"
+                    CircleProgressView:cpv_textScale="0"
                     CircleProgressView:cpv_unit="%"
                     CircleProgressView:cpv_unitColor="@color/primary_light"
                     CircleProgressView:cpv_unitPosition="right_top"
                     CircleProgressView:cpv_unitScale="1"
                     CircleProgressView:cpv_value="5"
-                android:layout_weight="1"/>
+                    CircleProgressView:cpv_fillColor="@color/colorPrimaryDark"
+
+                    android:layout_weight="1"/>
             </TableRow>
 
         </TableLayout>
